--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "gatsby": "^2.15.20",
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
