--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "gatsby": "^2.15.20",
+    "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-plugin-react-helmet": "^3.3.3",
     "netlify-lambda": "^1.6.3",
     "node-fetch": "^2.6.0",
     "node-html-parser": "^1.1.16",
-    "gatsby-plugin-google-analytics": "^2.1.31",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-helmet": "^6.0.0"
   }
 }
