--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "gatsby": "^2.15.20",
     "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "netlify-lambda": "^1.6.3",
     "node-fetch": "^2.6.0",
