a11y plugin이 error대신 warn을 내게

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,11 @@
     command = "yarn build"
     publish = "public"
     functions = "functions"
+
+[[plugins]]
+package = "netilfy-plugin-a11y"
+
+  [plugins.inputs]
+  checkPaths = ['/']
+  resultMode = "warn"
+
