--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
     functions = "functions"
 
 [[plugins]]
-package = "netilfy-plugin-a11y"
+package = "netlify-plugin-a11y"
 
   [plugins.inputs]
   checkPaths = ['/']
